# grpc_test

./: .gitignore  README.md  docker-compose.mock.yml  pyproject.toml
internal/pb/: photocatalog_pb2.py  photocatalog_pb2.pyi  photocatalog_pb2_pbreflect.py
protos/: photocatalog.proto
settings/: settings.py
